Generic Push, click to check

--- a/etc/calamares/modules/partition.conf
+++ b/etc/calamares/modules/partition.conf
@@ -16,6 +16,6 @@ initialPartitioningChoice: none
 
 initialSwapChoice: none
 
-defaultFileSystemType:  "ext4"
+defaultFileSystemType:  "ZFS"
 
-availableFileSystemTypes:  ["ext4"]
+availableFileSystemTypes:  ["ext4", "ZFS"]
